--- a/music-share-local-files.html
+++ b/music-share-local-files.html
@@ -943,8 +943,7 @@
                 if ('showDirectoryPicker' in window) {
                     console.log('✅ File System Access API supported');
                     const dirHandle = await window.showDirectoryPicker({
-                        mode: 'read',
-                        startIn: 'music'
+                        mode: 'read'
                     });
                     
                     showProgress('Scanning folder...', 0);
